@@ -167,12 +167,6 @@ public:
     bool inTable() const { return m_refCountAndFlags & s_refCountFlagInTable; }
     void setInTable() { m_refCountAndFlags |= s_refCountFlagInTable; }
 
-// SYNC SYNC SYNC
-// SYNC SYNC SYNC
-// SYNC SYNC SYNC
-// SYNC SYNC SYNC
-// SYNC SYNC SYNC
-
     unsigned hash() const { if (!m_hash) m_hash = computeHash(m_data, m_length); return m_hash; }
     unsigned existingHash() const { ASSERT(m_hash); return m_hash; }
     static unsigned computeHash(const UChar* data, unsigned length) { return WTF::stringHash(data, length); }
