@@ -1,5 +1,13 @@
 2010-03-11  Gavin Barraclough  <barraclough@apple.com>
 
+        Rubber stamped by Oliver Hunt.
+
+        Remove nonsense comments used in development & commited in error.
+
+        * platform/text/StringImpl.h:
+
+2010-03-11  Gavin Barraclough  <barraclough@apple.com>
+
         Reviewed by Oliver Hunt.
 
         https://bugs.webkit.org/show_bug.cgi?id=36041
